fix overflow

--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -5,6 +5,10 @@
 	}
 }
 
+body {
+	overflow-x: hidden;
+}
+
 #home-billboard {
 	background-image: url(../images/bg-nick-comito-full-mobile.jpg);
 	background-position: 50% -70px;
